website/versioned_docs/version-1.2.1/overview.mdx
---
title: "Overview"
keywords: [ hudi, design, table, queries, timeline]
summary: "Here we introduce some basic concepts & give a broad technical overview of Hudi"
toc: true
last_modified_at: 2019-12-30T15:59:57-04:00
---

import SlackCommunity from '@site/src/components/SlackCommunity';

Hello there! This overview will provide a high level summary of what Apache Hudi is and will orient you on
how to learn more to get started.

## What is Apache Hudi

Apache Hudi (pronounced "hoodie") pioneered the concept of "[transactional data lakes](https://www.uber.com/blog/hoodie/)", which is more popularly known today as
the data lakehouse architecture. Today, Hudi has grown into an [open data lakehouse platform](/blog/2021/07/21/streaming-data-lake-platform), with a open table format purpose-built for high performance writes on
incremental data pipelines and fast query performance due to comprehensive table optimizations.

Hudi brings core database functionality directly to a data lake - [tables](sql_ddl.md),
[transactions](timeline.md), [efficient upserts/deletes](write_operations.md), [advanced indexes](indexes.md),
[ingestion services](hoodie_streaming_ingestion.md), data [clustering](clustering.md)/[compaction](compaction.md) optimizations,
and [concurrency control](concurrency_control.md) all while keeping your data in open file formats. Not only is Apache Hudi great for streaming workloads,
but it also allows you to create efficient incremental batch pipelines. Apache Hudi can easily be used on any [cloud storage platform](cloud.md).
Hudi’s advanced performance optimizations, make analytical queries/pipelines faster with any of the popular query engines including, Apache Spark, Flink, Presto, Trino, Hive, etc.

Read the docs for more [use case descriptions](use_cases.md) and check out [who's using Hudi](/powered-by), to see how some of the
largest data lakes in the world including [Uber](https://www.uber.com/en-IN/blog/uber-big-data-platform/), [Amazon](https://aws.amazon.com/blogs/big-data/how-amazon-transportation-service-enabled-near-real-time-event-analytics-at-petabyte-scale-using-aws-glue-with-apache-hudi/),
[ByteDance](http://hudi.apache.org/blog/2021/09/01/building-eb-level-data-lake-using-hudi-at-bytedance),
[Robinhood](https://s.apache.org/hudi-robinhood-talk) and more are transforming their production data lakes with Hudi.

[Hudi-rs](https://github.com/apache/hudi-rs) is the native Rust implementation for Apache Hudi, which also provides bindings to Python. It
expands the use of Apache Hudi for a diverse range of use cases in the non-JVM ecosystems.

## Core Concepts to Learn

If you are relatively new to Apache Hudi, it is important to be familiar with a few core concepts:
- [Hudi Timeline](timeline.md) – How Hudi manages transactions and other table services
- [Hudi File Layout](storage_layouts.md) - How the files are laid out on storage
- [Hudi Table Types](table_types.md) – `COPY_ON_WRITE` and `MERGE_ON_READ`
- [Hudi Query Types](table_types.md#query-types) – Snapshot Queries, Incremental Queries, Read-Optimized Queries

See more in the "Design & Concepts" section of the docs.

Take a look at recent [blog posts](/blog) that go in depth on certain topics or use cases.

## Getting Started

Sometimes the fastest way to learn is by doing. Try out these Quick Start resources to get up and running in minutes:

- [Spark Quick Start Guide](quick-start-guide.md) – if you primarily use Apache Spark
- [Flink Quick Start Guide](flink-quick-start-guide.md) – if you primarily use Apache Flink
- [Python/Rust Quick Start Guide (Hudi-rs)](python-rust-quick-start-guide.md) - if you primarily use Python or Rust
- [Unstructured Data Quick Start Guide](unstructured-data-quick-start-guide.md) – store embeddings (`VECTOR`) and raw bytes (`BLOB`) and run similarity search with `hudi_vector_search`

If you want to experience Apache Hudi integrated into an end to end demo with Kafka, Spark, Hive, Presto, etc, try out the [Docker Demo](docker_demo.md)

## Connect With The Community
Apache Hudi is community-focused and community-led and welcomes new-comers with open arms. Leverage the following
resources to learn more, engage, and get help as you get started.

### Join in on discussions
See all the ways to [engage with the community here](/community/get-involved). Two most popular methods include:
- <SlackCommunity title="Hudi Slack Channel"/>
- [Hudi mailing list](mailto:users-subscribe@hudi.apache.org) - (send any msg to subscribe)

### Come to Office Hours for help
Weekly office hours are [posted here](/community/office_hours)

### Community Calls
Attend [monthly community calls](/community/syncs#monthly-community-call) to learn best practices and see what others are building.

## Contribute
Apache Hudi welcomes you to join in on the fun and make a lasting impact on the industry as a whole. See our
[contributor guide](/contribute/how-to-contribute) to learn more, and don’t hesitate to directly reach out to any of the
current committers to learn more.

Have an idea, an ask, or feedback about a pain-point, but don’t have time to contribute? Join the <SlackCommunity title="Hudi Slack Channel"/>
and share!
